Closed
Bug 149543
Opened 23 years ago
Closed 22 years ago
meta refresh rate of -1 does not prevent page refreshes
Categories
(Core :: Layout, defect, P3)
Tracking
()
RESOLVED
FIXED
Future
People
(Reporter: liam.westley, Assigned: attinasi)
References
()
Details
Attachments
(1 file)
|
1.00 KB,
patch
|
alecf
:
review+
bzbarsky
:
superreview+
|
Details | Diff | Splinter Review |
From Bugzilla Helper:
User-Agent: Mozilla/4.0 (compatible; MSIE 5.5; Windows NT 5.0; T312461)
BuildID: 2002053012
In order to prevent refreshing of a HTML page the following value was used to
indicate not refresh was required,
<meta http-equiv="refresh" content="-1" >
IE, Netscape and Opera all take this to mean - don't refresh. Mozilla I
believe takes this as refresh every second.
It may be that a value of -1 is fairly illegal in terms of standards, and what
should happen is that there should be no refresh meta tag if you don't want a
refresh. A fairly reasonable point of view.
Reproducible: Always
Steps to Reproduce:
1. Create HTML page with meta tag, <meta http-equiv="refresh" content="-1" >
2. Load it - watch it refresh
3. Load it in IE, Netscape, Opera - watch it not refresh
Actual Results: Page refreshes in Mozilla.
Expected Results: Mozilla shouldn't have refreshed the page
Comment 1•23 years ago
|
||
-1 means "refresh one second ago", which is what we try to do in this case...
jag, should we just treat a value smaller than 0 as meaning "no refresh
header"? That's what IE and NS4 seem to do....
And yes, just not having a refresh header if you don't want a refresh would
make sense, no? ;)
Comment 2•23 years ago
|
||
*** Bug 187672 has been marked as a duplicate of this bug. ***
Comment 3•23 years ago
|
||
given that meta refresh with a negative value isn't well defined by the
standards, i'd vote for conforming to existing browsers.
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•23 years ago
|
Priority: -- → P3
Target Milestone: --- → Future
If it makes Mozilla conformant, then I say we just ignore it. I'll submit a
sample patch.
Of course, the way to disable meta refresh is not to include it in the first
place, or turn the tag into a comment. Stepping off into undocumented land of
negative numbers isn't a good idea.
Comment on attachment 116208 [details] [diff] [review]
Patch
Requesting r/sr on simple patch. Negative seconds in meta refresh are ignored
rather than causing an immediate refresh.
Attachment #116208 -
Flags: superreview?(bzbarsky)
Attachment #116208 -
Flags: review?(jaggernaut)
Updated•22 years ago
|
Attachment #116208 -
Flags: superreview?(bzbarsky) → superreview+
Comment 7•22 years ago
|
||
Comment on attachment 116208 [details] [diff] [review]
Patch
sr=alecf
Attachment #116208 -
Flags: review?(jaggernaut) → review+
Comment 8•22 years ago
|
||
Looks good to me.
Fix is checked in
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•