Ignore meta refresh values that supply negative numbers. b=149543 r=alecf@netscape.com sr=bzbarsky@mit.edu